--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,5 +1,5 @@
 .cover__overlay {
-    min-height: 740px;
+    width: 100%;
     overflow: hidden;
     background: rgba(42, 44, 47, 0.3);
     display: flex;
@@ -7,14 +7,14 @@
     align-items: center;
     justify-content: center;
     transition: .3s linear;
-    position: relative;
+    text-decoration: none;
 }
 
 .cover__overlay:hover {
     background: rgba(42, 44, 47, 0.8);
 }
 
-@media all and (min-width: 1024px) and (max-width: 1280px) {
+@media all and (min-width: 1024px) and (max-width: 1279px) {
     .cover__overlay {
         width: 100%;
         min-height: 640px;
@@ -28,7 +28,7 @@
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .cover__overlay {
         width: 100%;
         min-height: 200px;
