--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,7 +2,7 @@
     max-width: 360px;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;;
     font-size: 1.1rem;
@@ -11,10 +11,9 @@
     text-align: center;
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .cover__subtitle {
         font-size: 0.8rem;
-        line-height: 1.1;
         padding: 0 16px;
     }
 }
