--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,10 @@
+@import url(./__overlay/cover__overlay.css);
+@import url(./__title/cover__title.css);
+@import url(./__subtitle/cover__subtitle.css);
+
 .cover {
     min-height: 740px;
+    display: flex;
     width: calc(100% - 96px);
     margin: 0 48px 92px;
     background-image: url(../../images/cover-trains.jpg);
@@ -8,7 +13,7 @@
     background-repeat: no-repeat;
 }
 
-@media all and (min-width: 1024px) and (max-width: 1280px) {
+@media all and (min-width: 1024px) and (max-width: 1279px) {
     .cover {
         margin: 0 0 92px;
         width: 100%;
@@ -24,7 +29,7 @@
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .cover {
         margin: 0 0 64px;
         width: 100%;
