--- a/blocks/footer/__link-wrapper/footer__link-wrapper.css
+++ b/blocks/footer/__link-wrapper/footer__link-wrapper.css
@@ -4,7 +4,7 @@
     display: flex;
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .footer__link-wrapper {
         flex-direction: column;
         margin-bottom: 48px;
