--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,14 +8,14 @@
     padding-right: 0;
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .footer__link {
         padding: 0 0 32px;
         font-size: 1.5rem;
         line-height: 1;
     }
     .footer__link:last-child {
-        padding: 0 0 0px;
+        padding: 0;
     }
 }
 
