--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,8 @@
+@import url(./__link-wrapper/footer__link-wrapper.css);
+@import url(./__link/footer__link.css);
+@import url(./__link-text/footer__link-text.css);
+@import url(./__copyright/footer__copyright.css);
+
 .footer {
     padding: 0 48px 24px;
     display: flex;
@@ -5,16 +10,15 @@
     align-items: center;
 }
 
-@media all and (min-width: 768px) and (max-width: 1024px) {
+@media all and (min-width: 768px) and (max-width: 1023px) {
     .footer {
         padding: 0 24px 24px;
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 768px) {
+@media all and (max-width: 767px) {
     .footer {
         padding: 0 0 24px 16px;
-        display: flex;
         flex-direction: column;
         align-items: flex-start;
     }
