--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,3 +1,9 @@
+@import url(./__logo/header__logo.css);
+@import url(./__link-cover/header__link-cover.css);
+@import url(./__lang-link/header__lang-link.css);
+@import url(./__lang-link-text/header__lang-link-text.css);
+@import url(./__lang-link-text/_active/header__lang-link-text_active.css);
+
 .header {
     padding: 28px 48px 0;
     margin-bottom: 56px;
@@ -6,7 +12,7 @@
     align-items: center;
 }
 
-@media all and (min-width: 320px) and (max-width: 1280px) {
+@media all and (max-width: 1279px) {
     .header {
         margin-bottom: 48px;
     }
@@ -18,7 +24,7 @@
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .header {
         padding: 16px 16px 0;
     }
