--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,7 @@
 .intro__title {
     margin: 0;
     color: #ffffff;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;;
     font-size: 3.3rem;
@@ -9,7 +9,7 @@
     font-weight: 900;
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .intro__title {
         font-size: 2rem;
         line-height: 1.09;
