--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,13 +4,13 @@
     padding-top: 64px;
 }
 
-@media all and (min-width: 768px) and (max-width: 1280px) {
+@media all and (min-width: 768px) and (max-width: 1279px) {
     .lead__image {
         padding-top: 56px;
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .lead__image {
         padding-top: 40px;   
     }
