--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,7 @@
 .lead__subtitle {
     margin: 0 auto;
     max-width: 640px;;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;;
     color: #ffffff;
@@ -10,7 +10,7 @@
     text-align: center;
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .lead__subtitle {
         max-width: 288px;
         font-size: 1rem;
