--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 .lead__title {
     margin: 0;
     padding-bottom: 32px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;;
     color: #ffffff;
@@ -17,7 +17,7 @@
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .lead__title {
         font-size: 2.5rem;
         padding: 0 16px 16px;
