--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,3 +1,5 @@
+@import url(./__item/photo-grid__item.css);
+
 .photo-grid {
     margin-bottom: 92px;
     padding: 0 48px;
@@ -6,7 +8,8 @@
     grid-gap: 16px;
 }
 
-@media all and (min-width: 1024px) and (max-width: 1280px) {
+
+@media all and (min-width: 1024px) and (max-width: 1279px) {
     .photo-grid {
         grid-gap: 14px;
     }
@@ -15,12 +18,11 @@
 @media all and (min-width: 768px) and (max-width: 1023px) {
     .photo-grid {
         padding: 0 24px;
-        grid-gap: 16px;
         margin-bottom: 88px;
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .photo-grid {
         padding: 0 16px;
         grid-gap: 12px;
