--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,10 +1,10 @@
 .place__paragraph {
     margin: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;;
     font-size: 1.1rem;
-    line-height: 1.6;
+    line-height: 1.67;
     color: #FFFFFF;
     align-self: start;
 }
@@ -13,14 +13,14 @@
     padding-bottom: 24px;
 }
 
-@media all and (min-width: 320px) and (max-width: 1023px) {
+@media all and (max-width: 1023px) {
     .place__paragraph {
         font-size: 1rem;
-        line-height: 1.6;
+        line-height: 1.63;
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .place__paragraph {
         padding: 0 16px;
     }
