--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,7 @@
 .place__title {
     max-width: 460px;
     margin: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;;
     font-size: 4.5rem;
@@ -16,13 +16,13 @@
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 1023px) {
+@media all and (max-width: 1023px) {
     .place__title {
         line-height: 1;
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .place__title {
         font-size: 2rem;
         padding: 0 16px;
