--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,15 @@
+@import url(./__title/place__title.css);
+@import url(./__website/place__website.css);
+@import url(./__url-heading/place__url-heading.css);
+@import url(./__link/place__link.css);
+@import url(./__image/place__image.css);
+@import url(./__paragraph-wrapper/place__paragraph-wrapper.css);
+@import url(./__paragraph/place__paragraph.css);
+
 .place {
     padding-bottom: 80px;
     display: grid;
-    grid-template-columns: minmax(320px, 460px) auto;
+    grid-template-columns: minmax(440px, 460px) minmax(456px, 484px);
     grid-gap: 48px 40px;
 }
 
@@ -9,20 +17,22 @@
     padding-bottom: 0;
 }
 
-@media all and (min-width: 1024px) and (max-width: 1280px) {
+@media all and (min-width: 1024px) and (max-width: 1279px) {
     .place {
+        grid-template-columns: minmax(340px, 440px) minmax(352px, 456px);
         grid-gap: 48px 32px;
     }
 }
 
 @media all and (min-width: 768px) and (max-width: 1023px) {
     .place {
+        grid-template-columns: minmax(320px, 340px) minmax(288px, 352px);
         grid-gap: 48px 28px;
         padding-bottom: 72px;
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .place {
         grid-template-columns: 100%;
         grid-gap: 32px;
