--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,7 +3,7 @@
     padding: 0 148px;
 }
 
-@media all and (min-width: 1024px) and (max-width: 1280px) {
+@media all and (min-width: 1024px) and (max-width: 1279px) {
     .places {
         padding: 0 48px;
     }
@@ -16,7 +16,7 @@
     }
 }
 
-@media all and (min-width: 320px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .places {
         padding: 0;
         margin-bottom: 64px;
