--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -13,10 +13,15 @@
     background-repeat: no-repeat;
 }
 
+@media all and (max-width: 1279px) {
+    .cover {
+        width: 100%;
+    }
+}
+
 @media all and (min-width: 1024px) and (max-width: 1279px) {
     .cover {
         margin: 0 0 92px;
-        width: 100%;
         min-height: 640px;
     }
 }
@@ -24,7 +29,6 @@
 @media all and (min-width: 768px) and (max-width: 1023px) {
     .cover {
         margin: 0 0 88px;
-        width: 100%;
         min-height: 480px;
     }
 }
@@ -32,7 +36,6 @@
 @media all and (max-width: 767px) {
     .cover {
         margin: 0 0 64px;
-        width: 100%;
         min-height: 200px;
     }
 }
